2005-09-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/connection_base.hxx:
  - Hopefull fixed auto_ptr issue, thanks Maximiliano Pin.
2005-09-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, src/connection_base.cxx:
  - Removed spurious "return," thanks Maximiliano Pin
  - RogueWave's auto_ptr doesn't copy-construct from const (Max again)
2005-09-06  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
  - Added <cassert>, thanks a.maclean@cas.edu.au
2005-09-01  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
  - Replaced some assertions with exceptions
2005-08-30  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/libpqxx.xml:
  - Wrong variable name in example.  Thanks Marc Herbert.
  - Mentioned outdated OnCommit() etc. names--thanks Lolke Dijkstra
 include/pqxx/connection_base.hxx, src/connection_base.cxx:
  - Made capabilities check immediate (was deferred) for thread safety
 include/pqxx/cursor.hxx, src/cursor.cxx:
  - New move/fetch functions correct for weird row accounting
 include/pqxx/result.hxx, src/result.cxx:
  - reverse_iterators now "point at" same element as embedded iterator
  - reverse_iterators' base() now use temporaries, which is safe
  - reverse_iterators' mutable m_tmp member no longer needed
  - reverse_iterators' dereference operators now inherited unchanged
  - Improved thread safety on reverse_iterators
  - Simplified difference computation on reverse_iterators
 test/test042.cxx:
  - Use displacements returned by new cursor fetch/move functions
2005-08-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/binarystring.hxx, include/pqxx/cursor.hxx,
 include/pqxx/util.hxx:
  - Documentation on thread safety
 include/pqxx/connection_base.hxx, src/connection_base.cxx:
  - Moved all fd_set-related things from class to implementation
  - Improved thread safety
 Makefile.am
  - Removed include/pqxx from include path
 src/Makefile.am, tools/maketestam.pl: